--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "serde-example"
-version = "0.1.0"
-authors = ["David Tolnay <dtolnay@gmail.com>"]
+name = "redbin"
+version = "0.0.1"
+authors = ["Maciej Łoziński <loziniak@o2.pl>"]
 license = "MIT OR Apache-2.0"
-description = "An example Serializer and Deserializer data format for Serde"
-repository = "https://github.com/serde-rs/example-format"
-documentation = "https://serde.rs/data-format.html"
-keywords = ["serde"]
+description = "Serde Redbin format"
+#repository = "https://github.com/serde-rs/example-format"
+#documentation = "https://serde.rs/data-format.html"
+keywords = ["serde", "redbin", "red"]
 categories = ["encoding"]
 edition = "2018"
-rust-version = "1.31"
+#rust-version = "1.31"
 publish = false
 
 [dependencies]
